--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "bootstrap": "^5.0.0-beta1",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -40,7 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-  ,
-"homepage":"https://dukza.github.io/templete/"
+  },
+  "homepage": "https://dukza.github.io/templete/"
 }
